@@ -97,16 +97,21 @@ class BP_Compliments {
     }
 
     /**
-     * Get the sender IDs for a given user.
+     * Get the compliments for a given user.
      * @param $user_id
      * @param $offset
      * @param $limit
+     * @param bool|int $c_id
      * @return mixed
      */
-    public static function get_compliments( $user_id, $offset, $limit ) {
+    public static function get_compliments( $user_id, $offset, $limit, $c_id = false ) {
         global $bp, $wpdb;
         $table_name = BP_COMPLIMENTS_TABLE;
-        return $wpdb->get_results( $wpdb->prepare( "SELECT * FROM {$table_name} WHERE receiver_id = %d ORDER BY created_at DESC LIMIT %d, %d", $user_id, $offset, $limit ) );
+        if ($c_id) {
+            return $wpdb->get_results( $wpdb->prepare( "SELECT * FROM {$table_name} WHERE receiver_id = %d AND id = %d ORDER BY created_at DESC LIMIT %d, %d", $user_id, $c_id, $offset, $limit ) );
+        } else {
+            return $wpdb->get_results( $wpdb->prepare( "SELECT * FROM {$table_name} WHERE receiver_id = %d ORDER BY created_at DESC LIMIT %d, %d", $user_id, $offset, $limit ) );
+        }
     }
 
     /**
